# rust-simple-auth

./: .dockerignore  .env_example  .gitignore  Cargo.toml  Dockerfile  README.md  back-end-paper.postman_collection.json  impl.md
bruno/Rust Auth/: Logout.bru  Receive Logged in User Information.bru  Register.bru  Token Refresh.bru  Update Bassword by OTP.bru  Update Password by Password.bru  User Login.bru  bruno.json  collection.bru
bruno/Rust Auth/Admin/: Delete User-Account.bru  Lock User-Account.bru  Set Admin State on User.bru  Unlock User-Account.bru
bruno/Rust Auth/OTP/: Delete OTP.bru  Get all OTPS.bru  New Password OTP.bru  New Register OTP.bru
docker/: docker-compose.yml
migrations/2023-05-18-170011_create_users/: up.sql
migrations/2023-07-26-165253_blocked_users/: down.sql  up.sql
migrations/2023-07-27-094325_create_otp/: down.sql  up.sql
migrations/2024-01-13-130342_otp_rework/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs  state.rs
src/api/: mod.rs
src/api/auth/: auth.rs  mod.rs  password.rs  queries.rs  session.rs  user.rs
src/api/otp/: mod.rs  otp.rs  queries.rs
src/api/system_setup/: init_admin_user.rs  mod.rs
src/api/user/: mod.rs  queries.rs  user.rs
src/middleware/: authorized.rs
src/models/: mod.rs  otp.rs  user.rs
src/state/: mod.rs  postgres_wrapper.rs  redis_wrapper.rs
src/utils/: error.rs  mod.rs  parser.rs
swagger/: main.yml
