[package]
name = "back-end-paper-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
dotenv = "0.15.0"
bcrypt = "0.14.0"
uuid = { version = "1.3.2", features = ["v4", "serde", "fast-rng"]}
chrono = { version = "0.4.24", features = ["serde"] }
bb8 = "0.8.0"
diesel = { version = "2.0.4", features = ["uuid"] }
diesel-async = { version = "0.2.2", features = ["bb8", "postgres"]}
redis = { version = "0.23.0", features = ["aio", "connection-manager", "tokio-comp"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
serde_json = "1.0.100"
