[package]
name = "rust-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"]}
dotenv = "0.15.0"
bcrypt = "0.17.0"
uuid = { version = "1.16.0", features = ["v4", "serde", "fast-rng"]}
chrono = { version = "0.4.41", features = ["serde"] }
bb8 = "0.8.3"
diesel = { version = "2.2.10", features = ["uuid"] }
diesel-async = { version = "0.5.2", features = ["bb8", "postgres"]}
redis = { version = "0.31.0", features = ["aio", "connection-manager", "tokio-comp"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower-http = { version = "0.6.4", features = ["trace", "cors"] }
serde_json = "1.0.140"
